force-app/main/default/objects/plaunch__Planning_Contacts__c/plaunch__Planning_Contacts__c.object-meta.xml
<CustomObject>
    <description>Store the leads or contacts related to a Planning List</description>
    <label>Planning Contacts</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planning Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>