force-app/main/default/objects/plaunch__Planning_Contacts__c/fields/plaunch__Account__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Contact is only an Account (no Contact no Lead)</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planning Contacts</relationshipLabel>
    <relationshipName>Planning_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>