force-app/main/default/objects/plaunch__Planning_Contacts__c/fields/plaunch__Completed__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>