force-app/main/default/objects/plaunch__Planning_Contacts__c/fields/plaunch__Contact__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Planning Contacts</relationshipLabel>
    <relationshipName>Planning_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>