force-app/main/default/objects/plaunch__Planning_Contacts__c/fields/plaunch__Deleted__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>