force-app/main/default/objects/plaunch__Planning_Contacts__c/fields/plaunch__Lead__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Planning Contacts</relationshipLabel>
    <relationshipName>Planning_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>