force-app/main/default/objects/plaunch__Planning_Contacts__c/fields/plaunch__Manual__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually added</inlineHelpText>
    <label>Manual</label>
    <type>Checkbox</type>
</CustomField>