force-app/main/default/objects/plaunch__Planning_Contacts__c/fields/plaunch__Order__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>