force-app/main/default/objects/plaunch__Planning_Contacts__c/fields/plaunch__Planning__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Planning__c</fullName>
    <description>Planning List</description>
    <label>Planning</label>
    <referenceTo>plaunch__Planning__c</referenceTo>
    <relationshipLabel>Planning Contacts</relationshipLabel>
    <relationshipName>Planning_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>