force-app/main/default/objects/plaunch__Planning_Contacts__c/fields/plaunch__Score__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>